[REF] connector_pms: pre-commit error

--- a/connector_pms/views/channel_backend_log_views.xml
+++ b/connector_pms/views/channel_backend_log_views.xml
@@ -30,7 +30,7 @@
         <field name="name">channel.backend.log.tree</field>
         <field name="model">channel.backend.log</field>
         <field name="arch" type="xml">
-            <tree string="PMS Channel Backend Log">
+            <tree>
                 <field name="backend_id" />
                 <field name="timestamp" />
                 <field name="method_id" />
