[IMP]pms_ocr_klippa: improvement log info

--- a/pms_ocr_klippa/views/klippa_log_views.xml
+++ b/pms_ocr_klippa/views/klippa_log_views.xml
@@ -29,7 +29,7 @@
                     </group>
                     <notebook>
                         <page string="Klippa Response">
-                            <field name="klippa response" />
+                            <field name="klippa_response" />
                         </page>
                         <page string="Service Response">
                             <field name="service_response" />
