--- a/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -32,7 +32,95 @@
             </xpath>
         </field>
     </record>
-    <!-- View Ticket Tree -->
+    <!-- View Ticket kanban -->
+    <record id="pms_ticket_view_kanban" model="ir.ui.view">
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk_mgmt.view_helpdesk_ticket_kanban" />
+        <field name="arch" type="xml">
+            <xpath
+                expr="//div[@class='o_kanban_record_headings']/field[@name='number']"
+                position="after"
+            >
+                <div class="font-weight-bold text-info">
+                    <br />
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-house-exclamation"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207l-5 5V13.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 2 13.5V8.207l-.646.647a.5.5 0 1 1-.708-.708z"
+                        />
+                        <path
+                            d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0m-3.5-2a.5.5 0 0 0-.5.5v1.5a.5.5 0 1 0 1 0V11a.5.5 0 0 0-.5-.5m0 4a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"
+                        />
+                    </svg>
+                    <span class="text-dark bg-warning rounded">
+                        <field name="property_id" />
+                    </span>
+                </div>
+                <div class="text-warning">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-r-square"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            d="M5.5 4.002h3.11c1.71 0 2.741.973 2.741 2.46 0 1.138-.667 1.94-1.495 2.24L11.5 12H9.98L8.52 8.924H6.836V12H5.5zm1.335 1.09v2.777h1.549c.995 0 1.573-.463 1.573-1.36 0-.913-.596-1.417-1.537-1.417z"
+                        />
+                        <path
+                            d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"
+                        />
+                    </svg>
+                    <span class="text-dark"><field name="room_id" /></span>
+                </div>
+                <div class="text-warning">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-bookmark-star"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.18.18 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.18.18 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.18.18 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.18.18 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.18.18 0 0 0 .134-.098z"
+                        />
+                        <path
+                            d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"
+                        />
+                    </svg>
+                    <span class="text-dark"><field name="category_id" /></span>
+                </div>
+
+                <div class="text-warning">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-calendar-plus"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"
+                        />
+                        <path
+                            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"
+                        />
+                    </svg>
+                    <span class="text-dark"><field name="create_date" /></span>
+                </div>
+            </xpath>
+        </field>
+    </record>
+    <!-- View Ticket tree -->
     <record id="ticket_view_tree" model="ir.ui.view">
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_mgmt.ticket_view_tree" />
@@ -49,8 +137,12 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_mgmt.ticket_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='number']" position="before">
-                <div class="custom_icon_group" />
+            <xpath expr="//div[@class='oe_title']" position="inside">
+                <div class="custom-icon-wrapper">
+                    <div class="icon-container text-info">
+                        <i class="fa fa-life-ring" aria-hidden="true" />
+                    </div>
+                </div>
             </xpath>
             <xpath expr="//field[@name='company_id']" position="after">
                 <field name="property_id" options="{'no_create': True}" />
