--- a/pms_l10n_es/views/pms_reservation_views.xml
+++ b/pms_l10n_es/views/pms_reservation_views.xml
@@ -5,18 +5,24 @@
         <field name="model">pms.reservation</field>
         <field name="inherit_id" ref="pms.pms_reservation_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='reservation_type']" position="after">
-                <field name="ses_comunication_ids">
-                    <tree string="Comunicaciones">
-                        <field name="reservation_id" />
-                        <field name="comunication_id" />
-                        <field name="operation" />
-                        <field name="entity" />
-                        <field name="date_time" />
-                        <field name="state" />
-                        <field name="processing_result" />
-                    </tree>
-                </field>
+            <xpath expr="//page[@name='others']" position="before">
+                <page
+                    string="SES Comunications"
+                    name="property_general"
+                    attrs="{'invisible': [('institution','!=','ses')]}"
+                >
+                    <field name="ses_comunication_ids">
+                        <tree string="Comunicaciones">
+                            <field name="reservation_id" />
+                            <field name="comunication_id" />
+                            <field name="operation" />
+                            <field name="entity" />
+                            <field name="date_time" />
+                            <field name="state" />
+                            <field name="processing_result" />
+                        </tree>
+                    </field>
+                </page>
             </xpath>
         </field>
     </record>
