--- a/pms_l10n_es/views/pms_ses_comunication_views.xml
+++ b/pms_l10n_es/views/pms_ses_comunication_views.xml
@@ -11,7 +11,8 @@
                         <field name="comunication_id" />
                         <field name="operation" />
                         <field name="entity" />
-                        <field name="date_time" />
+                        <field name="notification_time" />
+                        <field name="processing_time" />
                         <field name="state" />
                         <field name="processing_result" />
                     </group>
@@ -28,7 +29,8 @@
                 <field name="comunication_id" />
                 <field name="operation" />
                 <field name="entity" />
-                <field name="date_time" />
+                <field name="notification_time" />
+                <field name="processing_time" />
                 <field name="state" />
                 <field name="processing_result" />
             </tree>
@@ -41,7 +43,8 @@
         <field name="arch" type="xml">
             <search string="Log institution traveller report">
                 <field name="reservation_id" />
-                <field name="date_time" />
+                <field name="notification_time" />
+                <field name="processing_time" />
                 <field name="state" />
             </search>
         </field>
