--- a/pms_l10n_es/views/pms_ses_comunication_views.xml
+++ b/pms_l10n_es/views/pms_ses_comunication_views.xml
@@ -15,6 +15,8 @@
                         <field name="processing_time" />
                         <field name="state" />
                         <field name="processing_result" />
+                        <field name="soap_content" widget="CopyClipboardChar" />
+                        <field name="xml_content" widget="CopyClipboardChar" />
                     </group>
                 </sheet>
             </form>
