[ADD] pms_l10n_es: add ses comunication fields (soap & xml) sent and processed

--- a/pms_l10n_es/views/pms_ses_comunication_views.xml
+++ b/pms_l10n_es/views/pms_ses_comunication_views.xml
@@ -15,8 +15,11 @@
                         <field name="processing_time" />
                         <field name="state" />
                         <field name="processing_result" />
-                        <field name="soap_content" widget="CopyClipboardChar" />
-                        <field name="xml_content" widget="CopyClipboardChar" />
+                        <field name="xml_content_sent" widget="CopyClipboardChar" />
+                        <field name="soap_content_sent" widget="CopyClipboardChar" />
+
+                        <field name="xml_content_process" widget="CopyClipboardChar" />
+                        <field name="soap_content_process" widget="CopyClipboardChar" />
                     </group>
                 </sheet>
             </form>
