[ADD] pms_l10n_es: add 'create_date' to related communication views

--- a/pms_l10n_es/views/pms_reservation_views.xml
+++ b/pms_l10n_es/views/pms_reservation_views.xml
@@ -18,6 +18,7 @@
                             <field name="communication_id" />
                             <field name="operation" />
                             <field name="entity" />
+                            <field name="create_date" />
                             <field name="communication_time" />
                             <field name="query_status_time" />
                             <field name="state" />
