--- a/pms_l10n_es/views/pms_ses_communication_views.xml
+++ b/pms_l10n_es/views/pms_ses_communication_views.xml
@@ -11,6 +11,7 @@
                         <field name="communication_id" />
                         <field name="operation" />
                         <field name="entity" />
+                        <field name="create_date" />
                         <field name="communication_time" />
                         <field name="query_status_time" />
                         <field name="state" />
@@ -42,6 +43,7 @@
                 <field name="communication_id" />
                 <field name="operation" />
                 <field name="entity" />
+                <field name="create_date" />
                 <field name="communication_time" />
                 <field name="query_status_time" />
                 <field name="state" />
@@ -56,6 +58,7 @@
         <field name="arch" type="xml">
             <search string="Log SES Communications">
                 <field name="reservation_id" />
+                <field name="create_date" />
                 <field name="communication_time" />
                 <field name="query_status_time" />
                 <field name="state" />
