--- a/pms_l10n_es/views/pms_reservation_views.xml
+++ b/pms_l10n_es/views/pms_reservation_views.xml
@@ -18,10 +18,12 @@
                             <field name="communication_id" />
                             <field name="operation" />
                             <field name="entity" />
+                            <!-- times -->
                             <field name="create_date" />
                             <field name="communication_time" />
                             <field name="query_status_time" />
                             <field name="state" />
+                            <field name="sending_result" />
                             <field name="processing_result" />
                         </tree>
                     </field>
