[FIX]pms_hr_property: name card and

--- a/pms_hr_property/views/pms_hr_property_view.xml
+++ b/pms_hr_property/views/pms_hr_property_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="pms.pms_property_views_form" />
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
-                <page name="team_alda2" string="Regional Staff">
+                <page name="staff_property" string="Property Staff">
                     <field name="employee_ids">
                         <tree string="Employees">
                             <field name="job_id" />
