--- a/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -101,4 +101,30 @@
             </xpath>
         </field>
     </record>
+    <!-- View Form Ticket Tag -->
+    <record id="pms_ticket_tag_view_form" model="ir.ui.view">
+        <field name="model">helpdesk.ticket.tag</field>
+        <field name="inherit_id" ref="helpdesk_mgmt.view_helpdesk_ticket_tag_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='name']" position="after">
+                <group>
+                    <field
+                        name="company_id"
+                        options="{'no_create': True}"
+                        groups="base.group_multi_company"
+                    />
+                </group>
+            </xpath>
+        </field>
+    </record>
+    <record id="pms_view_ticket_tag_tree" model="ir.ui.view">
+        <field name="name">pms.helpdesk.ticket.tag.tree</field>
+        <field name="model">helpdesk.ticket.tag</field>
+        <field name="inherit_id" ref="helpdesk_mgmt.view_helpdesk_ticket_tag_tree" />
+        <field name="arch" type="xml">
+            <tree>
+                <field name="company_id" groups="base.group_multi_company" />
+            </tree>
+        </field>
+    </record>
 </odoo>
